# nba-stats-model

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.json
src/data/: features.py  fetch_games.py  process.py
src/models/: elo_grid_search.py  evaluate.py  train.py  xgboost_grid_search.py
src/utils/: display.py  io.py  style.py
tests/: conftest.py  feature_tests.py  model_tests.py  test_features.py  test_process.py  test_train.py
